dev/tests/cases/neg/48_echo_bridge.tv
df main() -> void {
    set ch: bridge<i64> = bridge_new(1);
    echo!(ch);
    bridge_close(ch);
}
